2003-09-01  Nick Drochak  <ndrochak@gol.com>

	* AsyncCalls.cs: Fix Build breaker on .NET 1.1.

2003-08-22  Lluis Sanchez Gual <lluis@ximian.com>

	* BaseCalls.cs: Create 3 test remote objects, one for each kind of access,
	  to avoid reuse of client proxies.
	* CallSeq.cs: Now, "domain ID" is set manually.
	* ContextsTest.cs: Added initialization of common domain id. Other small fixes.
	* ReflectionCalls.cs: Get the method for the invoke for the correct type.
	  GetType() for a proxy to interface always return MarshalByRefObject.
	* TcpCalls.cs, HttpCalls.cs: Added delegate tests.
	* DelegateCalls.cs: New test suite for calls using delegates.

2003-08-20  Lluis Sanchez Gual <lluis@ximian.com>

	* AsyncCalls.cs, BaseCalls.cs, HttpCalls.cs, ReflectionCalls.cs, SyncCalls.cs,
	  TcpCalls.cs: new test suite for remoting. It tests sync calls, async calls
	  and reflection calls using tcp and http channels.
	* CallSeq.cs, ContextHookAttribute.cs: Add methods for getting a context and
	  domain ids that are the same between tests runs.
	* ContextsTest.cs: unregister channel on test shutdown.

2003-07-23  Lluis Sanchez Gual <lluis@ximian.com>

	* ContextsTest.cs, CallSeq.cs, ContextHookAttribute.cs, ServerObject.cs: Added.
